# Chitti_ROS

./: .gitignore  QUICK_START.md  ROS Architecture and Plan.md  analysis_results.md  binary_test.py  demonstration_guide.md  esp_test.py  hardware_wiring_guide.md  implementation_plan.md  motor_calibration_guide.md  walkthrough.md
esp32_firmware/: binary_test_firmware.ino  esp32_firmware.ino
ros_ws/: GPIO_UART_SETUP.md  PREOPER_README.md  README.md  SENSOR_INTEGRATION.md  frames_2026-04-14_11.08.11.gv  iitg.graphml  patch_osrm.py  patch_rviz.py  rewrite.py  update_coords.py
ros_ws/scratch/: diagnostic_check.py
ros_ws/scripts/: build.sh  setup.sh  setup_cloud_env.sh  smoke_test_nav.sh
ros_ws/src/chitti_bringup/: CMakeLists.txt  package.xml
ros_ws/src/chitti_bringup/config/: ekf.yaml  nav2_params.yaml  navsat_transform.yaml
ros_ws/src/chitti_bringup/launch/: hardware.launch.py  hmi_system.launch.py  navigation.launch.py  robot.launch.py  sensors.launch.py
ros_ws/src/chitti_bringup/maps/: campus_map.pgm  campus_map.yaml
ros_ws/src/chitti_bringup/rviz/: nav_debug.rviz
ros_ws/src/chitti_control/: CMakeLists.txt  chitti_control_plugin.xml  package.xml
ros_ws/src/chitti_control/config/: controllers.yaml
ros_ws/src/chitti_control/src/: cytron_hardware_interface.cpp
ros_ws/src/chitti_description/: CMakeLists.txt  package.xml
ros_ws/src/chitti_description/launch/: description.launch.py
ros_ws/src/chitti_description/urdf/: chitti.urdf.xacro
ros_ws/src/chitti_hmi/: package.xml  setup.cfg  setup.py
ros_ws/src/chitti_hmi/chitti_hmi/: qr_generator_node.py  touchscreen_interface_node.py  ui_state_manager_node.py  user_session_manager_node.py
ros_ws/src/chitti_hmi/config/: ui_layout.yaml
ros_ws/src/chitti_hmi/resource/: chitti_hmi
ros_ws/src/chitti_hmi/web_interface/: app.py
ros_ws/src/chitti_hmi/web_interface/static/css/: style.css
ros_ws/src/chitti_hmi/web_interface/static/js/: app.js  audio_recorder.js
ros_ws/src/chitti_hmi/web_interface/templates/: voice_input.html
ros_ws/src/chitti_interaction/: package.xml  setup.cfg  setup.py
ros_ws/src/chitti_interaction/chitti_interaction/: __init__.py  response_generator_node.py  text_to_speech_node.py  tour_dialogue_node.py
ros_ws/src/chitti_msgs/: package.xml
ros_ws/src/chitti_msgs/action/: ConductTour.action  ProcessVoice.action  SpeakResponse.action
ros_ws/src/chitti_msgs/msg/: AudioMode.msg  LocationRequest.msg  NetworkStatus.msg  ScreenState.msg
ros_ws/src/chitti_msgs/srv/: CloseSession.srv  StartNavigation.srv  UpdateUI.srv
ros_ws/src/chitti_navigation/: setup.py
ros_ws/src/chitti_navigation/chitti_navigation/: destination_manager_node.py  fake_sensors.py  osrm_path_node.py  path_follower_node.py  waypoint_manager_node.py
ros_ws/src/chitti_navigation/config/: campus_locations.yaml
ros_ws/src/chitti_navigation/resource/: chitti_navigation
ros_ws/src/chitti_system/: setup.py
ros_ws/src/chitti_system/chitti_system/: network_monitor_node.py  state_manager_node.py  tour_manager_node.py
ros_ws/src/mpu9250driver/: package.xml  setup.cfg  setup.py
ros_ws/src/mpu9250driver/mpu9250driver/: mpu9250_node.py
scripts/: smoke_test_nav.sh
src/chitti_bringup/config/: nav2_params.yaml
src/chitti_bringup/launch/: hmi_system.launch.py  navigation.launch.py
src/chitti_bringup/rviz/: nav_debug.rviz
src/chitti_hmi/: setup.py
src/chitti_hmi/chitti_hmi/: __init__.py  audio_output_manager_node.py  ui_state_manager_node.py  voice_input_server_node.py
src/chitti_hmi/web_interface/static/css/: style.css
src/chitti_hmi/web_interface/static/js/: app.js
src/chitti_interaction/chitti_interaction/: intent_classifier_node.py  nlp_processor_node.py  tour_dialogue_node.py
src/chitti_interaction/resource/: chitti_interaction
src/chitti_msgs/: CMakeLists.txt
src/chitti_msgs/action/: NavigateToLocation.action
src/chitti_msgs/msg/: QRCode.msg  RobotLocation.msg  RobotState.msg  TourStatus.msg
src/chitti_msgs/srv/: CreateSession.srv  CustomizeTour.srv  SetAudioMode.srv
src/chitti_navigation/: package.xml  setup.cfg  setup.py
src/chitti_navigation/chitti_navigation/: __init__.py  destination_manager_node.py  fake_sensors.py  osrm_path_node.py  path_follower_node.py
src/chitti_navigation/config/: campus_locations.yaml
src/chitti_system/: package.xml
src/chitti_system/chitti_system/: __init__.py  battery_monitor_node.py  diagnostics_node.py
src/chitti_system/resource/: chitti_system
