<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chitti_hmi</name>
  <version>0.0.1</version>
  <description>Human-Machine Interface for Chitti robot with touchscreen and web-based voice input</description>
  <maintainer email="dev@iitgn.ac.in">IITGN Robotics</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>chitti_msgs</depend>

  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-flask-socketio</exec_depend>
  <exec_depend>python3-qrcode</exec_depend>
  <exec_depend>python3-pyttsx3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
